--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,15 @@
       #33bbcf 90.29%
     );
   }
+
+  .bg-dimBlue:hover {
+    background: linear-gradient(
+      -168.39deg,
+      #ffffff -278.56%,
+      #6d6d6d -78.47%,
+      #11101d 91.61%
+    );
+  }
   
   .bg-black-gradient {
     background: linear-gradient(
@@ -150,10 +159,11 @@
   
   .pink__gradient {
     background: linear-gradient(90deg, #f4c4f3 0%, #fc67fa 100%);
-    filter: blur(900px);
+    filter: blur(200px);
   }
   
   .white__gradient {
     background: rgba(255, 255, 255, 0.6);
     filter: blur(750px);
   }
+  
